badge 컴포넌트 업로드

--- a/css/stylehh.css
+++ b/css/stylehh.css
@@ -39,3 +39,21 @@
         filter: brightness(0.3);
     }
 }
+
+/* badge */
+
+.badge {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background-color: blanchedalmond;
+    position: relative;
+}
+
+.bi {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    color: black;
+}
