--- a/css/stylehh.css
+++ b/css/stylehh.css
@@ -18,8 +18,9 @@
     top: 30%;
     transform: translate(-50%, -30%);
     color: white;
-    font-weight: 900;
     font-size: 8vw;
+    font-family: "Gasoek One", sans-serif;
+    font-weight: 400;
 }
 
 #main_explain {
@@ -56,4 +57,13 @@
     top: 50%;
     transform: translate(-50%, -50%);
     color: black;
+}
+
+.scroll-side {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background-color: rgb(207, 207, 207);
+    opacity: 0.5;
+    position: relative;
 }
