--- a/css/style.css
+++ b/css/style.css
@@ -1,74 +1,51 @@
-/* slider */
-.slider__wrap {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-/* 이미지 보이는 부분 */
-.slider__img {
+.swiper {
+  width: 630px;
+  height: 200px;
   position: relative;
-  width: 600px;
-  height: 400px;
-  overflow: hidden;
-}
-/* 이미지 감싸고 있는 부모 : 움직이는 부분 */
-.slider__inner {
-  display: flex;
-  flex-wrap: wrap;
-  /* 총 이미지 6개 */
-  width: 4800px;
-  height: 400px;
-}
-/* 개별적인 이미지 */
-.slider {
-  position: relative;
-  width: 600px;
-  height: 400px;
-}
-.slider img {
-  width: 100%;
-}
-.slider::before {
-  position: absolute;
-  left: 5px;
-  top: 5px;
-  background: rgba(0, 0, 0, 0.4);
-  color: #fff;
-  padding: 5px 10px;
-}
-.slider:nth-child(1)::before {
-  content: "img1";
-}
-.slider:nth-child(2)::before {
-  content: "img2";
-}
-.slider:nth-child(3)::before {
-  content: "img3";
-}
-.slider:nth-child(4)::before {
-  content: "img4";
-}
-.slider:nth-child(5)::before {
-  content: "img5";
-}
-.slider:nth-child(6)::before {
-  content: "img6";
-}
-.slider:nth-child(7)::before {
-  content: "img7";
-}
-.slider:nth-child(8)::before {
-  content: "img8";
-}
-.slider:nth-child(6)::before {
-  content: "img1";
 }
 
-@media (max-width: 800px) {
-  .slider__img {
-    width: 400px;
-    height: 300px;
-  }
+.swiper .swiper-slide {
+  height: 200px;
+  background-color: orange;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.material-icons {
+  font-size: 30px;
+  color: white;
+}
+
+.swiper-button-prev::after,
+.swiper-button-next::after {
+  content: "";
+  display: none;
+}
+
+.swiper-pagination {
+  color: white;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  width: 30px;
+  height: 30px;
+  border: 2px solid white;
+  border-radius: 50%;
+  position: absolute;
+  top: 100px;
+  z-index: 1;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.swiper-button-prev {
+  left: 10px;
+}
+.swiper-button-next {
+  right: 10px;
 }
