--- a/css/stylehh.css
+++ b/css/stylehh.css
@@ -67,3 +67,45 @@
     opacity: 0.5;
     position: relative;
 }
+
+/* 배너 */
+
+body {
+    background-attachment: fixed;
+    background-image: url(https://cdn.imweb.me/thumbnail/20230126/97f0ad1bebd44.jpg);
+    background-size: cover !important;
+    background-repeat: no-repeat !important;
+    background-position: 50% 50%;
+}
+
+.banner {
+    width: 100%;
+    max-width: 1240px;
+    padding: 0;
+    margin: 0 auto;
+    background-color: transparent;
+}
+
+.banner .item {
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 16px;
+    position: relative;
+}
+
+.item {
+    height: 60px;
+}
+
+.banner-content {
+    color: white;
+    font-size: 20px;
+    font-weight: 700;
+    text-align: right;
+}
+
+.event-btn {
+    position: absolute;
+    right: 2vw;
+}
