--- a/css/product_popup.css
+++ b/css/product_popup.css
@@ -17,11 +17,13 @@
 }
 
 #modal .modal_content {
-  width: 300px;
-  margin: 100px auto;
+  width: 500px;
+  height: 200px;
+  margin: 20px auto;
   padding: 20px 10px;
-  background: #fff;
-  border: 2px solid #666;
+  background: none;
+  /* border: 2px solid #2d2d2d; */
+  color: white;
 }
 
 #modal .modal_layer {
@@ -30,6 +32,6 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.7);
   z-index: -1;
 }
