--- a/css/stylehh.css
+++ b/css/stylehh.css
@@ -109,3 +109,88 @@
     position: absolute;
     right: 2vw;
 }
+
+/* 주문페이지 */
+
+.pur-product {
+    width:100%; /* 반응형 너비 설정 */
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin-bottom: 20px;
+}
+
+.pur-product-info {
+    text-align: center;
+}
+
+.checkout {
+    width: 100%;
+    height: 50%;
+    border: 1px solid #ccc;
+    padding: 20px;
+}
+.check-group {
+    margin-bottom: 20px;
+}
+.check-group label {
+    display: block;
+    font-weight: bold;
+}
+.check-group input[type="text"],
+.check-group input[type="email"],
+.check-group select {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+.check-group select {
+    height: 40px;
+}
+.check-group input[type="submit"] {
+    background-color: #333;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+}
+@media screen and (min-width: 768px) {
+    .container {
+        display: flex;
+        margin: 20px auto;
+    }
+
+    .purchase {
+        width: 100vw;
+        padding: 0 20px;
+    }
+
+    .pur-product img {
+        max-width: 100%;
+        height: auto;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .container {
+        width: 100%;
+    }
+
+    .purchase {
+        width: 100%;
+        padding: 0 20px;
+    }
+
+    .pur-product-form {
+        display: flex;
+    }
+
+    .pur-product img {
+        max-width: 100%;
+        height: auto;
+    }
+
+    .pur-product:not(:nth-child(2)) {
+        margin-right: 10px;
+    }
+}
