--- a/components/product_slider.html
+++ b/components/product_slider.html
@@ -21,20 +21,16 @@
       rel="stylesheet"
       href="http://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <link rel="stylesheet" href="/css/Img_slider.css" />
+    <link rel="stylesheet" href="/css/product_slider.css" />
   </head>
 
   <body>
     <div class="swiper">
       <div class="swiper-wrapper">
-        <img class="swiper-slide" src="/item_jpgs/item1.jpg"></img>
-        <img class="swiper-slide" src="/item_jpgs/item2.jpg"></img>
-        <img class="swiper-slide" src="/item_jpgs/item3.jpg"></img>
-        <img class="swiper-slide" src="/item_jpgs/item4.jpg"></img>
-        <img class="swiper-slide" src="/item_jpgs/item5.jpg"></img>
-        <img class="swiper-slide" src="/item_jpgs/item6.jpg"></img>
-        <img class="swiper-slide" src="/item_jpgs/item7.jpg"></img>
-        <img class="swiper-slide" src="/item_jpgs/item8.jpg"></img>
+        <img class="swiper-slide" src="/product_img/item1_1.jpg"></img>
+        <img class="swiper-slide" src="/product_img/item1_2.jpg"></img>
+        <img class="swiper-slide" src="/product_img/item1_3.jpg"></img>
+        <img class="swiper-slide" src="/product_img/item1_4.jpg"></img>
       </div>
 
       <div class="swiper-pagination"></div>
@@ -53,7 +49,7 @@
           delay: 2000,
         },
         loop: true,
-        slidesPerView: 3,
+        slidesPerView: 1,
         spaceBetween: 10,
         centeredSlides: true,
         pagination: {
