--- a/css/product_slider.css
+++ b/css/product_slider.css
@@ -1,6 +1,6 @@
 .swiper {
-  width: 630px;
-  height: 200px;
+  width: 50%;
+  height: 50%;
   position: relative;
 }
 
@@ -17,6 +17,7 @@
 .swiper-button-next {
   right: 10px;
 }
+
 .swiper-pagination-bullet-active {
   background: black;
   opacity: 50%;
