--- a/components/product_slider.html
+++ b/components/product_slider.html
@@ -45,12 +45,11 @@
 
     <script>
       new Swiper(".swiper", {
-        autoplay: {
-          delay: 2000,
-        },
+        // autoplay: {
+        //   delay: 2000,
+        // },
         loop: true,
         slidesPerView: 1,
-        spaceBetween: 10,
         centeredSlides: true,
         pagination: {
           el: ".swiper-pagination",
