--- a/css/stylehh.css
+++ b/css/stylehh.css
@@ -2,10 +2,25 @@
 
 .containermain {
     position: relative;
+    width: 100%;
+    text-align: center;
+    overflow: hidden; /* 이미지가 부모 요소를 벗어나지 않도록 설정 */
+}
+.main_content {
+    position: relative;
+    margin-top: 20px;
+    text-align: left;
+    color: white;
+
+    animation: main_cont 4s forwards;
 }
 
-#main {
-    position: relative;
+.main-bg {
+    width: 100%;
+    height: 80vh; /* 화면의 100% 높이에 해당하는 값 */
+    background-image: url('../img_logo/main.png');
+    background-size: cover; /* 이미지가 부모 요소에 꽉 차도록 설정 */
+    background-position: center; /* 이미지를 가운데로 정렬 */
 
     animation: main_back 2s 1s forwards;
 }
@@ -19,59 +34,47 @@
     }
 }
 
-@media screen and (min-width: 768px) {
-    #main {
-        width: 100%;
+@keyframes main_cont {
+    0% {
+        opacity: 0;
     }
+    100% {
+        opacity: 1;
+    }
+}
 
-    #main_brand {
+@media screen and (min-width: 768px) {
+    .main_content {
         position: absolute;
+        top: 50%;
         left: 50%;
-        top: 30%;
-        transform: translate(-50%, -30%);
-        color: white;
-        font-size: 8vw;
+        transform: translate(-50%, -50%);
+        text-align: center;
+    }
+    #main_brand {
+        font-size: 7vw;
         font-family: "Gasoek One", sans-serif;
         font-weight: 400;
     }
-    
     #main_explain {
-        position: absolute;
-        left: 50%;
-        top: 70%;
-        transform: translate(-50%, -70%);
-        color: white;
-        font-size: 2vw;
+        font-size: 2vw; 
     }
 }
 
 @media screen and (max-width: 767px) {
-    .containermain {
-        height: 70vh;
-        overflow: hidden;
-    }
-
-    #main {
-        object-fit: cover;
-    }
-
-    #main_brand {
+    .main_content {
         position: absolute;
-        left: 10vw;
-        top: 40%;
-        color: white;
-        font-size: 13vw;
+        left: 20px;
+        bottom: 50px;
+        width: 60%;
+    }
+    #main_brand {
+        font-size: 10vw;
         font-family: "Gasoek One", sans-serif;
         font-weight: 400;
     }
-    
     #main_explain {
-        position: absolute;
-        width: 50%;
-        left: 10vw;
-        top: 55%;
-        color: white;
-        font-size: 4vw;
+        font-size: 3vw;
     }
 }
 
