--- a/css/styleFooter.css
+++ b/css/styleFooter.css
@@ -1,51 +1,51 @@
-/* Footer */
-footer {
-    background-color: #F0F5F9 ;
-    padding-top: 5rem;
-    padding-bottom:5rem;
-  }
-  .footer__sections {
-    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
-  }
-section.footer__snsLogo{
-  display: flex;
-  justify-content:space-evenly;
-  align-items: center;
+ /* Footer */
+ footer {
+  background-color: #F0F5F9 ;
+  padding-top: 4rem;
+  padding-bottom:4rem;
 }
-.footer__snsLogo img{
-  max-width:50px;
-  max-height:50px;
-  margin: 0 10px 0 10px;
- 
-}
-span.list__item{
-  color: black;
+.footer__sections {
+  grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
 }
 .footer__section {
-    padding: 2rem; 
-  }
+  padding: 2rem;  border: 0;
+}
 
-  @media screen and (min-width: 768px) {
-    footer {
-      font-size: 1.5rem;
-    }
+.footer__snsLogo{
+
+display:flex;
+justify-content:space-evenly;
+align-items: center;
+}
+.list__item{
+line-height:normal;
+color: black; 
+font-weight: bold;
+font-size: 10px;
+ 
+}
+#youtube, #insta, #pint {width: 50px;margin: 0 10px 0 10px;}
+
+/* 768px 이하일때 */
+@media screen and (max-width: 768px) {
+  footer {
+    font-size: 1.5rem;
   }
-    footer__sections {
-      grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
-    }
-    .footer__section {
-      border: 0;
-    }
+}
 
 /* Grids */
 .grid {
-  display: grid;    
+display: grid;    
 }
 @media screen and (min-width: 768px) {
-  .grid {
-    grid-template-columns: repeat(2, 1fr);
-
-  }
+.grid {
+  grid-template-columns: repeat(2, 1fr);
+}
+#youtube, #insta, #pint {width: 30px; margin: 0 10px 0 10px;}
+.list__item{
+  line-height:normal;
+  color: black; 
+  font-size: 20px; 
 }
 
-  
+}
