--- a/css/purchase-pg.css
+++ b/css/purchase-pg.css
@@ -1,9 +1,34 @@
 /* 주문페이지 */
 
+body {
+    background-color: #C9D6DE;
+}
+
+.container {
+    background-color: white;
+}
+
+.pur-name {
+    font-family: "Gasoek One", sans-serif;
+    font-weight: 400;
+    font-size: 30px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.price-name {
+    padding-bottom: 10px;
+    font-weight: bold;
+}
+
 .pur-product {
     width:100%; /* 반응형 너비 설정 */
     border: 1px solid #ccc;
     padding: 10px;
+    display: block;
+}
+
+.pur-product-form>.pur-product {
     margin-bottom: 20px;
 }
 
@@ -13,20 +38,19 @@
 
 .checkout {
     width: 100%;
-    height: 50%;
     border: 1px solid #ccc;
     padding: 20px;
 }
-.check-group {
-    margin-bottom: 20px;
-}
-.check-group label {
+.check-name {
+    padding-bottom: 10px;
     display: block;
     font-weight: bold;
 }
+.check-group:not(:last-child) {
+    margin-bottom: 20px;
+}
 .check-group input[type="text"],
-.check-group input[type="email"],
-.check-group select {
+.check-group input[type="tel"] {
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
@@ -34,8 +58,12 @@
 }
 .check-group select {
     height: 40px;
+    width: 100%;
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
 .check-group input[type="submit"] {
+    width: 100%;
     background-color: #333;
     color: #fff;
     padding: 10px 20px;
@@ -50,7 +78,7 @@
 
     .purchase {
         width: 100vw;
-        padding: 0 20px;
+        padding: 20px;
     }
 
     .pur-product img {
@@ -62,11 +90,12 @@
 @media screen and (max-width: 767px) {
     .container {
         width: 100%;
+        margin: 20px auto;
     }
 
     .purchase {
         width: 100%;
-        padding: 0 20px;
+        padding: 20px;
     }
 
     .pur-product-form {
@@ -78,7 +107,7 @@
         height: auto;
     }
 
-    .pur-product:not(:nth-child(2)) {
+    .pur-product {
         margin-right: 10px;
     }
 }
