--- a/css/header.css
+++ b/css/header.css
@@ -1,145 +1,189 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 /* Navigation Bar */
+.header-largeMenu{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 15px 15px 15px;
+  z-index: 10;
+  background-color:  #1E2022;
+}
+.header-largeMenu .nav__brandLogo{
+  position:relative;
+}
+.header-largeMenu .nav__brandLogo img{
+   width:90px;
+}
+.header-largeMenu .nav__items{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin:0;
+}
+.header-largeMenu .header__nav li{
+  list-style: none;
+  margin: 0 10px;
+}
+.header-largeMenu .header__nav a{
+  color: #d2d0db;
+  text-decoration: none;
+  font-weight: 500;
+  letter-spacing: 1px;
+  transition: color 0.2s;
+}
+.nav__items > li:hover {
+  color: #fff;
+  font-size: xx-large;
+}
+.header-largeMenu .menuBarIcons{
+  display: flex;
+  position: relative;
+  justify-content: start;
+  justify-items: stretch;
+  /* gap: 20px; */
+}
+.button-menu-icon svg{
+  width:40px;
+  background-color: transparent;
+  fill: white;
+}
 
-.nav {
-    background: #1E2022;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    padding: 1rem;
-    align-items: center;
-    margin-left: 0;
-  }
+/* Menub bar icon effect */
+a:hover, a:focus{
+  outline: none;
   
-  .nav__list {
-    width: 100%;
-    margin: 0;
-  }
-  
-  .nav__item {
-    padding: 0.5rem 2rem;
-    border-bottom: 1px solid #222;
-  }
-  
-  .nav__item:last-of-type {
-    border-bottom: none;
-  }
-  
-  .nav__item >a {
-    color: #d2d0db;
-    transition: color 0.3s;
-  }
-  
-  .nav__item >a:hover {
-    color: #fff;
-    font-size: xx-large;
-  }
-  
-  .nav__toggler {
-    opacity: 0.5;
-    transition: box-shadow 0.15s;
-    cursor: pointer;
-  }
-  
-  .nav.collapsible--expanded .nav__toggler {
-    opacity: 1;
-    box-shadow: 0 0 0 3px #666;
-    border-radius: 5px;
-  }
-  
-  .nav__brandLogo {
-    transform: translateY(5px);
-    width: 90px;
-  }
-  .menuBarIcons{
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    align-items: center;
-    margin-left: 0;
-    gap: 30px;
-  }
-  .button-menu-icon{
-    border: none;
-  }
-  @media screen and (min-width: 768px) {
-    .nav__toggler {
-      display: none;
+}
+.SMN_effect-5{
+  display: flex;
+  padding-left: 15px;
+  align-items: center;
+  margin-top: 30px;
+}
+
+.SMN_effect-5 a:after {
+  top: 100%;
+  opacity: 0;
+  transition: transform 0.3s, opacity 0.3s;
+  transform: translateY(-10px);
+}
+.SMN_effect-5 a div:first-child {
+  z-index: 2;
+  display: block;
+  font-weight: 300;
+}
+.SMN_effect-5 a div:last-child {
+  z-index: 1;
+  display: block;
+  padding: 8px 0 0 0;
+  color: rgba(255, 255, 255, 0.4);
+  text-shadow: none;
+  text-transform: none;
+  font-style: normal;
+  font-size: 0.5em;
+  opacity: 0;
+  transition: transform 0.3s, opacity 0.3s;
+  transform: translateY(-100%);
+}
+.SMN_effect-5 a:hover:before, .SMN_effect-5 a:focus:before {
+  height: 6px;
+}
+.SMN_effect-5 a:hover:before, .SMN_effect-5 a:hover:after, .SMN_effect-5 a:focus:before, .SMN_effect-5 a:focus:after {
+  opacity: 1;
+  transform: translateY(0px);
+}
+.SMN_effect-5 a:hover div:last-child, .SMN_effect-5 a:focus div:last-child {
+  opacity: 1;
+  transform: translateY(0%);
+}
+  /* -----------------------Mini Menu------------------------ */
+@media screen and (max-width:768px) {
+    .minMenu {
+      padding: 0;
+      margin: 0;
     }
-    .nav__list {
-      width: auto;
-      display: flex;
-      font-size: 1.6rem;
-      max-height: 100%;
-      opacity: 1;
+    .minMenu {
+      width: 200px;
+      height: 30px;
+      text-align: center;
+      line-height: 30px;
+      background-color: #c9d6de;
     }
-    .nav__item {
-      border: 0;
+    
+    .minMenu > .sub {
+      width: 200px;
+      height: 0;
+      list-style: none;
+      overflow: hidden;
+      transition: height ease-out 0.5s 0s;
+    }
+    
+    .minMenu > .sub li {
+      background-color: #c9d6de;
+      border-top: 1px #1e2022 solid;
+    }
+    
+    .minMenu > .sub li > a {
+      text-decoration: none;
+      color: black;
     }
   }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-  /* Footer */
-footer {
-    background-color: #F0F5F9 ;
-    padding-top: 4rem;
-    padding-bottom:4rem;
-  }
-  .footer__sections {
-    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
-  }
-  .footer__section {
-    padding: 2rem;  border: 0;
-  }
+   /* Footer */
+ footer {
+  background-color: #F0F5F9 ;
+  padding-top: 4rem;
+  padding-bottom:4rem;
+}
+.footer__sections {
+  grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+}
+.footer__section {
+  padding: 2rem;  border: 0;
+}
 
 .footer__snsLogo{
-  
-  display:flex;
-  justify-content:space-evenly;
-  align-items: center;
+
+display:flex;
+justify-content:space-evenly;
+align-items: center;
 }
 .list__item{
-  line-height:normal;
-  color: black; 
-  font-weight: bold;
-  font-size: 10px;
-   
+line-height:normal;
+color: black; 
+font-weight: bold;
+font-size: 10px;
+ 
 }
 #youtube, #insta, #pint {width: 50px;margin: 0 10px 0 10px;}
 
 /* 768px 이하일때 */
 @media screen and (max-width: 768px) {
-    footer {
-      font-size: 1.5rem;
-    }
+  footer {
+    font-size: 1.5rem;
   }
+}
 
 /* Grids */
 .grid {
-  display: grid;    
+display: grid;    
 }
 @media screen and (min-width: 768px) {
-  .grid {
-    grid-template-columns: repeat(2, 1fr);
-  }
-  #youtube, #insta, #pint {width: 30px; margin: 0 10px 0 10px;}
-  .list__item{
-    line-height:normal;
-    color: black; 
-    font-size: 20px; 
-  }
-
+.grid {
+  grid-template-columns: repeat(2, 1fr);
+}
+#youtube, #insta, #pint {width: 30px; margin: 0 10px 0 10px;}
+.list__item{
+  line-height:normal;
+  color: black; 
+  font-size: 20px; 
 }
 
-  
+}
