--- a/css/footer.css
+++ b/css/footer.css
@@ -6,15 +6,16 @@
  }
 footer{
   width: 100%; 
+
   background-color: #F0F5F9 ;
   color: black;
 }
-
+ 
 .footer {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  gap: 3.5rem;
+  /* gap: 3.5rem; */
   padding: 60px;
   
 }
@@ -22,7 +23,7 @@ footer{
   line-height:normal;
   color: black; 
   font-weight: bold;
-  font-size: 20px;
+  font-size: 15px;
   text-decoration: none;
   }
 /* .footer-Copyright {
@@ -50,7 +51,7 @@ gap: 30px;
 /* 768px 이하일때 */
 @media screen and (max-width: 768px) {
   .footer {
-    width: auto;
+    width: 100%;
     font-size: 1.5rem;
   }
   .footer-snsLogo{
@@ -65,8 +66,9 @@ gap: 30px;
     font-size: 10px; 
     }
 .footer {
-  gap: 2.5rem;
-  padding: 30px;  
+  gap: 2rem;
+  padding: 30px;
+  justify-content: space-around;  
     }
 }
 
