--- a/css/header.css
+++ b/css/header.css
@@ -9,6 +9,11 @@
 }
 
 @media screen and (max-width: 767px) {
+    .nav-login {
+        padding-left: 20px;
+        line-height: 75px;
+    }
+
   .nav__list {
       display: none; 
   }
@@ -49,6 +54,10 @@
       line-height: 75px;
       
   }
+
+  nav{
+    display: none;
+  }
   
   .nav__item {
       padding-right: 20px;
@@ -66,6 +75,14 @@
 
   .nav__div {
       display: none;
+  }
+
+  .nav-login {
+    display: none;
+  }
+
+  .no_div {
+    display: none;
   }
 
   .menuBarIcons {
