--- a/css/header.css
+++ b/css/header.css
@@ -54,10 +54,6 @@
       line-height: 75px;
       
   }
-
-  nav{
-    display: none;
-  }
   
   .nav__item {
       padding-right: 20px;
@@ -92,5 +88,9 @@
 
   .button-menu-icon {
       padding-right: 20px;
+  }
+
+  .badge {
+    display: none;
   }
 }
