--- a/css/header.css
+++ b/css/header.css
@@ -3,16 +3,20 @@
 .header {
   background-color: #1E2022;
   width: 100%;
-  height: 75px;
+  height: 90px;
   display: flex;
   justify-content: space-between;
 }
 
 @media screen and (max-width: 767px) {
-    .nav-login {
-        padding-left: 20px;
-        line-height: 75px;
+  .nav-login {
+      padding-left: 20px;
+      line-height: 90px;
     }
+
+  .nav__brandLogo {
+      margin-top: 10px;
+  }
 
   .nav__list {
       display: none; 
@@ -27,8 +31,8 @@
       background-color: #F0F5F9;
       text-align: center;
       border-bottom: 1px solid #1E2022;
-      height: 75px;
-      line-height: 75px;
+      height: 90px;
+      line-height: 90px;
   }
 
   .div__item>a {
@@ -38,7 +42,7 @@
   }
   
   .nav__toggle {
-      line-height: 75px;
+      line-height: 90px;
       padding-right: 20px;
   }
 
@@ -51,10 +55,13 @@
   .nav__list {
       list-style: none;
       display: flex;
-      line-height: 75px;
-      
+      line-height: 90px;   
   }
-  
+
+  .nav__brandLogo {
+    margin-top: 10px;
+  }
+
   .nav__item {
       padding-right: 20px;
   }
@@ -83,7 +90,7 @@
 
   .menuBarIcons {
       display: flex;
-      line-height: 75px;
+      line-height: 90px;
   }
 
   .button-menu-icon {
