--- a/css/header.css
+++ b/css/header.css
@@ -1,22 +1,19 @@
 /* header */
 
-.header {
-  background-color: #1E2022;
-  width: 100%;
-  height: 90px;
-  display: flex;
-  justify-content: space-between;
-}
-
 @media screen and (max-width: 767px) {
+
+  .header {
+      background-color: #1E2022;
+      width: 100%;
+      height: 75px;
+      display: flex;
+      justify-content: space-between;
+  }
+
   .nav-login {
       padding-left: 20px;
-      line-height: 90px;
+      line-height: 75px;
     }
-
-  .nav__brandLogo {
-      margin-top: 10px;
-  }
 
   .nav__list {
       display: none; 
@@ -24,6 +21,9 @@
 
   .nav__div {
       display: none;
+      position: fixed;
+      z-index: 9999;
+      width: 100%;
   }
 
   .div__item {
@@ -31,8 +31,8 @@
       background-color: #F0F5F9;
       text-align: center;
       border-bottom: 1px solid #1E2022;
-      height: 90px;
-      line-height: 90px;
+      height: 75px;
+      line-height: 75px;
   }
 
   .div__item>a {
@@ -42,7 +42,7 @@
   }
   
   .nav__toggle {
-      line-height: 90px;
+      line-height: 75px;
       padding-right: 20px;
   }
 
@@ -52,6 +52,15 @@
 }
 
 @media screen and (min-width: 768px) {
+
+  .header {
+      background-color: #1E2022;
+      width: 100%;
+      height: 90px;
+      display: flex;
+      justify-content: space-between;
+  }
+
   .nav__list {
       list-style: none;
       display: flex;
