--- a/css/proguct_page.css
+++ b/css/proguct_page.css
@@ -1,3 +1,7 @@
+.main {
+  margin-top: 90px;
+}
+
 #modal {
   display: none;
   position: relative;
@@ -128,6 +132,10 @@ a.button {
 }
 
 @media screen and (max-width: 767px) {
+  .main {
+    margin-top: 75px;
+  }
+
   #modal {
     display: none;
     position: relative;
