--- a/css/header.css
+++ b/css/header.css
@@ -119,3 +119,11 @@
     display: none;
   }
 }
+button.button{
+    color: #fff;
+  }
+.nav__actions{
+    padding:0;
+    margin: 0;
+    border: none;
+}
