--- a/css/Img_slider.css
+++ b/css/Img_slider.css
@@ -1,5 +1,6 @@
 .swiper-back {
   background-color: #C9D6DE;
+  overflow: hidden;
 }
 
 .swiper-name {
@@ -14,6 +15,7 @@
 .swiper {
   width: 100%;
   position: relative;
+  overflow: visible;
 }
 
 .swiper-button-prev::after,
