component login search update

--- a/components/search.html
+++ b/components/search.html
@@ -1,24 +1,27 @@
-<!--==================== SEARCH ====================-->
+<!--==================== SEARCH html====================-->
 <div class="search" id="search">
-    <form action="" class="search__form">
-       <input type="search" placeholder="검색어를 입력하세요..." class="search__input">
-    </form>
-    <svg xmlns="http://www.w3.org/2000/svg" width="30px" fill="currentColor" class="bi bi-x search__close"  id="search-close" viewBox="0 0 16 16">
-      <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
-    </svg>
- </div>
- <script>
- /*=============== SEARCH script ===============*/
+   <form action="" class="search__form">
+   <input type="search" placeholder="검색어를 입력하세요..." class="search__input">
+   </form>
+   
+   <svg xmlns="http://www.w3.org/2000/svg" width="30px" fill="currentcolor" class="bi bi-x search__close" id="search-close"
+   viewBox="0 0 16 16">
+   <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
+   </svg>
+   </div>
+ <!--==================== SEARCH script====================-->
+   <script>
    const search = document.getElementById('search'),
-         searchBtn = document.getElementById('search-btn'),
-         searchClose = document.getElementById('search-close')
+   searchBtn = document.getElementById('search-btn'),
+   searchClose = document.getElementById('search-close')
    
    /* Search show */
    searchBtn.addEventListener('click', () =>{
-      search.classList.add('show-search')
+   search.classList.add('show-search')
    })
    
    /* Search hidden */
    searchClose.addEventListener('click', () =>{
-      search.classList.remove('show-search')
-   })</script>
+   search.classList.remove('show-search')
+   })
+   </script>
