--- a/css/badge.css
+++ b/css/badge.css
@@ -5,11 +5,12 @@
     right: 20px;
     display: flex;
     flex-direction: column;
+    z-index: 100;
   }
 
 .badge {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
     background-color: blanchedalmond;
     position: relative;
