--- a/css/header.css
+++ b/css/header.css
@@ -8,6 +8,7 @@
       height: 75px;
       display: flex;
       justify-content: space-between;
+      align-items: center;
       position: fixed;
       top: 0;
       left: 0;
@@ -16,7 +17,6 @@
 
   .nav-login {
       padding-left: 20px;
-      line-height: 75px;
     }
 
   .nav__list {
@@ -47,7 +47,6 @@
   }
   
   .nav__toggle {
-      line-height: 75px;
       padding-right: 20px;
   }
 
@@ -64,6 +63,7 @@
       height: 90px;
       display: flex;
       justify-content: space-between;
+      align-items: center;
       position: fixed;
       top: 0;
       left: 0;
@@ -73,7 +73,6 @@
   .nav__list {
       list-style: none;
       display: flex;
-      line-height: 90px;   
   }
 
   .nav__brandLogo {
@@ -108,7 +107,6 @@
 
   .menuBarIcons {
       display: flex;
-      line-height: 90px;
   }
 
   .button-menu-icon {
