--- a/css/proguct_page.css
+++ b/css/proguct_page.css
@@ -2,7 +2,7 @@ body {
   background-color: #c9d6de;
 }
 
-.main {
+.container {
   margin-top: 90px;
 }
 
@@ -134,7 +134,7 @@ a.button {
 }
 
 @media screen and (max-width: 767px) {
-  .main {
+  .container {
     margin-top: 75px;
   }
 
