--- a/css/proguct_page.css
+++ b/css/proguct_page.css
@@ -14,8 +14,9 @@ body {
 
 #modal .modal_content {
   position: absolute;
-  width: 95%;
-  margin: 20px auto;
+  width: 100%;
+  /* margin: 20px auto; */
+  margin-top: 90px;
   padding: 20px 10px;
   background: none;
   color: white;
@@ -29,6 +30,7 @@ body {
   height: 100%;
   background: rgba(0, 0, 0, 0.7);
   z-index: -1;
+  overflow-y: scroll;
 }
 
 .swiper {
@@ -141,7 +143,7 @@ a.button {
   #modal {
     display: none;
     position: relative;
-    z-index: 1;
+    z-index: 9999;
   }
 
   #modal .modal_content {
@@ -150,15 +152,20 @@ a.button {
     padding: 20px 10px;
     background: none;
     color: white;
+    margin-top: 75px;
+    width: 100%;
   }
 
   #modal .modal_layer {
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.7);
     z-index: -1;
+    overflow-y: scroll;
+    scrollbar-width: none;
   }
 
   .swiper {
