--- a/css/animation.css
+++ b/css/animation.css
@@ -72,11 +72,17 @@
     font-size: 40px;
 }
 
-.swiper-slide {
+.swiper-slide,
+.card {
     transition: transform 0.5s ease 0.5s;
 }
 
-.swiper-slide:hover {
+#content {
+    transition: font-size 0.5s ease 0.5s;
+}
+
+.swiper-slide:hover,
+.card:hover {
     transform: scale(1.3);
     z-index: 10;
 }
@@ -101,6 +107,10 @@
     #main_explain:hover {
         font-size: 4vw;
     }
+
+    #content:hover {
+        font-size: 3vw;
+    }
 }
   
 @media screen and (min-width: 768px) {
@@ -118,5 +128,9 @@
     
     #main_explain:hover {
         font-size: 3vw;
+    }
+
+    #content:hover {
+        font-size: 25px;
     }
 }
