--- a/css/badge.css
+++ b/css/badge.css
@@ -12,7 +12,7 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background-color: blanchedalmond;
+    background-color: #1E2022;
     position: relative;
     margin-bottom: 10px;
 }
@@ -22,7 +22,7 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    color: black;
+    color: white;
 }
 
 .scroll-side {
