--- a/css/proguct_page.css
+++ b/css/proguct_page.css
@@ -2,6 +2,11 @@ body {
   background-color: #c9d6de;
 }
 
+.body-back {
+  height: 15vh;
+  background-color: #C9D6DE;
+} 
+
 .container {
   margin-top: 90px;
 }
@@ -116,8 +121,7 @@ a.button {
   display: block;
   position: absolute;
   top: 0;
-  left: 0;
-  width: 120px;
+  left: -10px;
   height: 50px;
   border-radius: 5px;
   transition: all 0.2s;
@@ -130,9 +134,9 @@ a.button {
 .btnFloat:hover:before {
   margin-top: -2px;
   margin-left: 0px;
-  transform: scale(1.1, 1.1);
-  -ms-transform: scale(1.1, 1.1);
-  -webkit-transform: scale(1.1, 1.1);
+  transform: scale(2, 2);
+  -ms-transform: scale(2, 2);
+  -webkit-transform: scale(2, 2);
   box-shadow: 0px 5px 5px -2px rgba(0, 0, 0, 0.25);
 }
 
@@ -205,12 +209,5 @@ a.button {
   .close_button {
     display: flex;
     flex-direction: row-reverse;
-  }
-  p {
-    font-size: 2vw;
-  }
-  ul,
-  li {
-    font-size: 2vw;
   }
 }
