--- a/css/login.css
+++ b/css/login.css
@@ -37,7 +37,7 @@
     position: absolute;
     top: 10px;
     right: 20px;
-    color: #0b0217;
+    color: #040405;
     font-size: 22px;
     opacity: 0.7;
     cursor: pointer;
