--- a/css/search.css
+++ b/css/search.css
@@ -16,7 +16,6 @@
     position: absolute;
     top: 2rem;
     right: 2rem;
-    font-size: 2rem;
     color: white;
     cursor: pointer;
   }
@@ -32,6 +31,8 @@
   }
 
   .search__input {
+    position: absolute;
+    top: 20px;
     width: 100%;
     padding-block: 1rem;  
     color: black;
