--- a/css/login.css
+++ b/css/login.css
@@ -3,6 +3,23 @@
     transform: scale(0.98);
   }
 
+  /* 추가된 스타일 */
+  .blur-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* 배경을 반투명한 검은색으로 */
+    backdrop-filter: blur(5px); /* 블러 처리 */
+    z-index: 10000;
+    display: none; /* 초기에는 숨김 */
+}
+
+.home.show .blur-background {
+    display: block; /* 홈 클래스가 보일 때만 배경 보이기 */
+}
+
   /* Form */
   .form_container {
     position: fixed;
