--- a/css/search.css
+++ b/css/search.css
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100%;
     z-index: 1000;
-    background-color: hsla(230, 75%, 15%, .1);
+    background-color: hsla(47, 35%, 79%, 0.1);
     backdrop-filter: blur(24px);
     padding: 8rem 1.5rem 0;
     opacity: 0;
