--- a/css/header.css
+++ b/css/header.css
@@ -37,12 +37,14 @@
       text-align: center;
       height: 75px;
       line-height: 75px;
+      font-size: 20px;
   }
 
   .div__item>a {
       color: #F0F5F9;
       text-decoration: none;
-      font-weight: 500;
+      font-family: "Black Han Sans", sans-serif;
+      font-weight: 400;
   }
   
   .nav__toggle {
@@ -77,12 +79,14 @@
 
   .nav__item {
       padding-right: 20px;
+      font-size: 20px;
   }
   
   .nav__item>a {
       color: #d2d0db;
       text-decoration: none;
-      font-weight: 500;
+      font-family: "Black Han Sans", sans-serif;
+      font-weight: 400;
   }
 
   .nav__toggle {
