--- a/css/product_all.css
+++ b/css/product_all.css
@@ -20,11 +20,16 @@
 }
 
 .card h2 {
-  font-size: 1.5em;
+  font-size: 2em;
 }
 
 .card p {
   font-size: 1em;
+}
+
+h2 {
+  font-family: "Black Han Sans", sans-serif;
+  font-weight: 400;
 }
 
 @media screen and (max-width: 767px) {
