--- a/css/animation.css
+++ b/css/animation.css
@@ -17,6 +17,7 @@
     color: white;
     font-size: 30px;
     white-space: nowrap;
+    padding: 10px;
     z-index: 101;
 }
 
@@ -55,7 +56,7 @@
 .pur-product,
 .check-name,
 .check-btn {
-    transition: font-size 0.3s ease 0.5s;
+    transition: font-size 0.3s ease 0.3s;
 }
 
 .swiper-name:hover,
