--- a/css/footer.css
+++ b/css/footer.css
@@ -25,6 +25,7 @@ footer{
   font-weight: bold;
   font-size: 15px;
   text-decoration: none;
+  list-style: none;
   }
 /* .footer-Copyright {
   display:flex;
