음성 검색 뱃지, 이미지저장 버튼 추가

--- a/css/animation.css
+++ b/css/animation.css
@@ -3,7 +3,8 @@
 .search_tog,
 .nav-login,
 .nav__toggle,
-.badge {
+.badge,
+.badge-ai {
     position: relative;
 }
 
@@ -40,7 +41,8 @@
 .login_tog:hover .hover-text,
 .search_tog:hover .hover-text,
 .cart_tog:hover .hover-text,
-.nav-login:hover .hover-text {
+.nav-login:hover .hover-text,
+.badge-ai:hover .hover-text3 {
     display: block;
 }
 
