--- a/css/badge.css
+++ b/css/badge.css
@@ -17,6 +17,15 @@
     margin-bottom: 10px;
 }
 
+.badge-ai {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: rgb(96, 139, 247);
+    position: relative;
+    margin-bottom: 10px;
+}
+
 .badge-item {
     position: absolute;
     left: 50%;
