--- a/css/Img_slider.css
+++ b/css/Img_slider.css
@@ -32,13 +32,15 @@
   opacity: 70%;
 }
 
+.material-icons {
+  z-index: 10;
+}
+
 .swiper-button-prev {
   left: 10px;
-  z-index: 10;
 }
 .swiper-button-next {
   right: 10px;
-  z-index: 10;
 }
 .swiper-pagination-bullet-active {
   background: black;
