--- a/components/login.html
+++ b/components/login.html
@@ -3,7 +3,7 @@
   <div class="blur-background"></div>
   <div class="form_container">
     <i class="uil uil-times form_close"></i>
-    <!-- Login From -->
+    <!--==================== Login form start ====================-->
     <div class="form login_form"  >
       <form action="#" class="login-reset" id="form">
         <h2>로그인</h2>
@@ -31,7 +31,7 @@
         <div class="login_signup">계정 없으신가요? <a href="#" id="signup">회원 가입</a></div>
       </form>
     </div>
-    <!-- Signup From -->
+    <!--==================== signup form start ====================-->
     <div class="form signup_form">
       <form action="#">
         <h2>회원 가입</h2>
@@ -56,7 +56,7 @@
     </div>
   </div>
 </div>    
-<!--==================== Login script ====================-->
+<!--==================== Login script start ====================-->
 <script>
 const formOpenBtn = document.querySelector("#form-open")
 const formOpenlg = document.querySelector("#login_open"),
@@ -106,4 +106,4 @@ formContainer.classList.remove("active");
 });
 
 </script>
-<!----------------- Login script ----------->
+<!--==================== Login script end ====================-->
